# clarvis

./: .gitignore  LICENSE  README.md  config.toml  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
daemon/: clapd.py
kwin/: metadata.json
kwin/contents/code/: main.js
sound/: .gitignore
systemd/: clarvis.service  ydotoold.service
tests/: conftest.py  test_clapd.py
