[project]
name = "clarvis"
version = "1.0.0"
description = "Clap twice and Claude Code shows up — a KDE Wayland double-clap launcher."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gerardo Cipriano" }]
dependencies = ["numpy", "sounddevice"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
